--- a/.env.production
+++ b/.env.production
@@ -1,6 +1,6 @@
 ================ 开发环境 ====================
 ENV=DEV
-API_URL=http://172.16.18.37:8500/api/v1
+API_URL=http://admin.hushijie.com.cn
 CHUANGGAN_API_URL=https://rosenadmin.cheesestar.com/v1
 
 ============== 微信ID (Android) ==============
