--- a/ios/rnquickstart.xcodeproj/xcshareddata/xcschemes/rnquickstart-dev.xcscheme
+++ b/ios/rnquickstart.xcodeproj/xcshareddata/xcschemes/rnquickstart-dev.xcscheme
@@ -10,7 +10,7 @@
             ActionType = "Xcode.IDEStandardExecutionActionsCore.ExecutionActionType.ShellScriptAction">
             <ActionContent
                title = "Run Script"
-               scriptText = "echo &quot;.env.staging&quot; &gt; /tmp/envfile # Type a script or drag a script file from your workspace to insert its path.&#10;">
+               scriptText = "echo &quot;.env.development&quot; &gt; /tmp/envfile # Type a script or drag a script file from your workspace to insert its path.&#10;">
             </ActionContent>
          </ExecutionAction>
       </PreActions>
@@ -73,7 +73,7 @@
             ActionType = "Xcode.IDEStandardExecutionActionsCore.ExecutionActionType.ShellScriptAction">
             <ActionContent
                title = "Run Script"
-               scriptText = "echo &quot;.env.staging&quot; &gt; /tmp/envfile # Type a script or drag a script file from your workspace to insert its path.&#10;">
+               scriptText = "echo &quot;.env.development&quot; &gt; /tmp/envfile # Type a script or drag a script file from your workspace to insert its path.&#10;">
             </ActionContent>
          </ExecutionAction>
       </PreActions>
