--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@react-native-community/async-storage": "^1.9.0",
     "@react-native-community/netinfo": "^5.7.0",
     "i18n-js": "^3.5.1",
+    "immer": "^7.0.1",
     "lodash": "^4.17.15",
     "ramda": "^0.27.0",
     "react": "16.11.0",
@@ -49,7 +50,8 @@
     "redux-config": "^0.1.1",
     "redux-persist": "5.6.12",
     "redux-saga": "^1.1.3",
-    "teaset": "^0.7.4"
+    "teaset": "^0.7.4",
+    "use-immer": "^0.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.6.2",
