--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-native-exit-app": "^1.1.0",
     "react-native-gesture-handler": "^1.5.0",
     "react-native-largelist-v3": "^3.0.15",
+    "react-native-linear-gradient": "^2.5.6",
     "react-native-localize": "1.3.1",
     "react-native-pose": "^0.9.1",
     "react-native-reanimated": "^1.4.0",
