--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "dependencies": {
     "@react-native-community/async-storage": "^1.9.0",
     "@react-native-community/netinfo": "^5.7.0",
+    "dayjs": "^1.8.28",
     "i18n-js": "^3.5.1",
     "immer": "^7.0.1",
     "lodash": "^4.17.15",
